--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>no la ponemos en internet usted mismo debe ponerla.</p>
         </article>
 
-        <a href="http://google.com">busca aqui</a>
+        <a target="_blank" href="https://www.amazon.es/b?_encoding=UTF8&tag=jorge09aa-21&linkCode=ur2&linkId=584f577d5495622a444079a2629b89e0&camp=3638&creative=24630&node=665280031">quieres estar seguro cuando navegas por internet da click aqui</a>
         <img src="imagenes/disco.png" />
     </section>
     <aside class="columna">
