--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
             <h1>aviso importante</h1>
             <p>no la ponemos en internet usted mismo debe ponerla.</p>
         </article>
-
-        <a target="_blank" href="https://www.amazon.es/b?_encoding=UTF8&tag=jorge09aa-21&linkCode=ur2&linkId=584f577d5495622a444079a2629b89e0&camp=3638&creative=24630&node=665280031">quieres estar seguro cuando navegas por internet da click aqui</a>
         <img src="imagenes/disco.png" />
     </section>
     <aside class="columna">
@@ -36,6 +34,7 @@
             <p>correo: jorge-eliezer@outlook.com</p>
         <h4>informacion del contenido</h4>
         contactenos
+        <a target="_blank" href="https://www.amazon.es/b?_encoding=UTF8&tag=jorge09aa-21&linkCode=ur2&linkId=584f577d5495622a444079a2629b89e0&camp=3638&creative=24630&node=665280031"><img src="imagenes/Captura de pantalla (14).png /></a>
     </aside>
         
     <footer>
