--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>correo: jorge-eliezer@outlook.com</p>
         <h4>informacion del contenido</h4>
         contactenos
-         <a target="_blank" href="https://www.amazon.es/b?_encoding=UTF8&tag=jorge09aa-21&linkCode=ur2&linkId=584f577d5495622a444079a2629b89e0&camp=3638&creative=24630&node=665280031"><img src="imagenes/Captura de pantalla (14).png /></a>
+         <a target="_blank" href="https://www.amazon.es/b?_encoding=UTF8&tag=jorge09aa-21&linkCode=ur2&linkId=584f577d5495622a444079a2629b89e0&camp=3638&creative=24630&node=665280031"><img src="imagenes/Captura de pantalla (14).png" /></a>
     </aside>
     <footer>
         ________________________________________________________________________________________________________________________
