--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2626454292387101"
+     crossorigin="anonymous"></script>
         <meta charsert="utf-8" />
         <title>pagina web</title>
         <meta name="descripcion" content="esta es mi primera pagina web" />
