--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             <h1>aviso importante</h1>
             <p>no la ponemos en internet usted mismo debe ponerla.</p>
         </article>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2626454292387101"
+     crossorigin="anonymous"></script>
+<!-- masternet.ga -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2626454292387101"
+     data-ad-slot="5386208644"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+        </body>
+        
 
        
         <img src="imagenes/disco.png" />
