--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
         <meta name="descripcion" content="esta es mi primera pagina web" />
         <meta name="autor" content="jorge" />
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1VPT7C31JF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1VPT7C31JF');
+</script>
     <body>
     <div class="agrupar">        <header>
         <h1>que ofrecemos</h1>
